# Krusty

./: .gitignore  .mcp.json  AGENTS.md  AUDIT.md  Cross.toml  KRAB.md  PLAN.md  README.md  RESTRUCTURE_ROADMAP.md  install.sh
.githooks/: AGENTS.md  pre-commit
.github/: AGENTS.md
.github/homebrew/: AGENTS.md
.github/workflows/: AGENTS.md  ci.yml  release.yml
apps/: AGENTS.md
apps/desktop/: AGENTS.md  README.md
apps/desktop/shell/: AGENTS.md  README.md  package-lock.json  package.json
apps/desktop/shell/src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
apps/desktop/shell/src-tauri/icons/: AGENTS.md
apps/desktop/shell/src-tauri/src/: AGENTS.md  main.rs
apps/marketing/: README.md
apps/marketing/site/: README.md  download.html  index.html  pricing.html  privacy.html  styles.css  terms.html
apps/pwa/: AGENTS.md  README.md
apps/pwa/app/: .env.example  .gitignore  AGENTS.md  STYLE_GUIDE.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
apps/pwa/app/src/: AGENTS.md  app.css  app.d.ts  app.html  service-worker.ts
apps/pwa/app/static/: AGENTS.md  manifest.json
aur/: AGENTS.md
crates/: AGENTS.md
crates/krusty-cli/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/krusty-cli/src/: AGENTS.md  main.rs  serve.rs
crates/krusty-cli/src/tui/: AGENTS.md  CLAUDE.md  app.rs  app_builder.rs  auth.rs  mod.rs  render_model.rs
crates/krusty-core/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/krusty-core/src/: AGENTS.md  constants.rs  git.rs  lib.rs  paths.rs  server_instance.rs  tailscale.rs
crates/krusty-core/src/acp/: AGENTS.md  agent.rs  bridge.rs  error.rs  mod.rs  processor.rs  server.rs  session.rs  tools.rs  updates.rs
crates/krusty-core/src/agent/: AGENTS.md  build_context.rs  cache.rs  constants.rs  context.rs  executor.rs  failure.rs  hooks.rs  loop_events.rs  mod.rs  orchestrator.rs  pinch_context.rs  plan_handler.rs  stream.rs  subagent.rs  summarizer.rs  user_hooks.rs
crates/krusty-core/src/ai/: AGENTS.md  format_detection.rs  glm.rs  mod.rs  models.rs  opencodezen.rs  openrouter.rs  providers.rs  reasoning.rs  (+4 more)
crates/krusty-server/: AGENTS.md  Cargo.toml  README.md
crates/krusty-server/src/: AGENTS.md  auth.rs  error.rs  lib.rs  main.rs  push.rs  types.rs
crates/krusty-server/src/routes/: AGENTS.md  chat.rs  credentials.rs  files.rs  git.rs  hooks.rs  mcp.rs  mod.rs  models.rs  oauth.rs  ports.rs  preview_settings.rs  processes.rs  push.rs  sessions.rs  tools.rs
crates/krusty-server/src/utils/: AGENTS.md  mod.rs  paths.rs  providers.rs
crates/krusty-server/src/ws/: AGENTS.md  terminal.rs
wit/: AGENTS.md
(+351 files in other folders)
