[package]
name = "krusty-server"
version = "0.1.0"
edition = "2021"
description = "Self-hosted Krusty API server library"

[dependencies]
krusty-core = { path = "../krusty-core" }

tokio = { version = "1.40", features = ["full"] }

axum = { version = "0.7", features = ["macros", "ws"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

anyhow = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio-stream = "0.1"
futures = "0.3"

dirs = "6.0"
regex = "1.10"
uuid = { version = "1.11", features = ["v4"] }
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
portable-pty = "0.8"

[lints]
workspace = true
